--- a/driver_VS2013_SDL/changes.txt
+++ b/driver_VS2013_SDL/changes.txt
@@ -77,7 +77,10 @@ Code changes file.
    Update to version 1.3
    - Fix to synchronising of audio buffer (less crackly audio)
    - Fix to keyboard input
-    
+
+8 February 2018
+   - Fix to hang if PC audio not available
+
 
     
 
