Modern PC controller dual analog stick support
Added support for dual sticks on "generic" PC controller. Also support
for D-PAD on PC controller.

--- a/driver_VS2013_SDL/changes.txt
+++ b/driver_VS2013_SDL/changes.txt
@@ -81,7 +81,11 @@ Code changes file.
 8 February 2018
    - Fix to hang if PC audio not available
 
+25 September 2018
+   - Added PC controller dual analog stick support (for Robotron and
+     Space Dungeon). (Old PS2 version already had this).
 
+  
     
 
 
