--- a/changes.txt
+++ b/changes.txt
@@ -86,7 +86,9 @@ Code changes file.
 8 February 2018
    - Fix to hang if PC audio not available
 
-    
+25 September 2018
+   - Added PC controller dual analog stick support (for Robotron and
+     Space Dungeon). (Old PS2 version already had this).
 
     
 
