--- a/driver_Raspbian_SDL/changes.txt
+++ b/driver_Raspbian_SDL/changes.txt
@@ -68,6 +68,31 @@ Code changes 20/1/2010:
     (PORTED TO PSP VERSION)
   - Improved audio output (Linux), converting Pokey_process() output
     (uint8, centred about 128) to short (signed 16 bit) properly.
+25 January 2011
+   - Fixed bug reading jum52.cfg (only every 2nd line was being read)
+
+27 July 2014
+   - Added debugger "Jump to address" command (J)
+   - Changed debugger "R" command to reset 6502
+   - Reading GTIA CONSOL register now returns 0xF (for compatibility
+     with software ported from Atari 8-bit computers).
+
+11 June 2016
+   - Load 8k roms (mirrored 4x)
+   - Fix to 65C02 "decimal mode" (ADC and SBC opcodes)
+
+
+3 January 2017
+   Update to version 1.3
+   - Fix to synchronising of audio buffer (less crackly audio)
+   - Fix to keyboard input
+
+8 February 2018
+   - Fix to hang if PC audio not available
+
+25 September 2018
+   - Added PC controller dual analog stick support (for Robotron and
+     Space Dungeon). (Old PS2 version already had this).
 
 
     
